styling, product spacing on product list page fixed

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -106,6 +106,7 @@
   justify-content: center;
   align-items: center; */
   margin-left: 5%;
+  margin-bottom: 1%;
   background-color: rgb(236, 235, 253);
   padding: 1%;
 }
@@ -128,7 +129,7 @@
   padding: 3% 0%;
   height: 250px;
   object-fit: contain;
-  border: 2px solid black;
+  border: 2px solid rgb(35, 41, 48);
   border-radius: 3px;
   background-color: white;
 }
@@ -156,11 +157,13 @@
 .product-list {
   display: flex;
   flex-wrap: wrap;
+  /* justify-content: flex-start; */
   max-width: 1900px;
 }
 
 .product-list-item {
-  min-height: 620px;
+  min-height: 630px;
+  margin: 1rem;
 }
 
 .product-image {
